--- a/Looplayer/AndroidManifest.xml
+++ b/Looplayer/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.cybisoft.looplayer"
+    package="sc.media.looplayer"
     android:versionCode="8"
     android:versionName="r1.7" >
 
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="net.cybisoft.looplayer.MainActivity"
+            android:name="sc.media.loopplayer.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="net.cybisoft.looplayer.BootReceiver" >
+        <receiver android:name="sc.media.loopplayer.BootReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
